Make char select canvas stretch horizontally, display only selected character when ready, prevent readying without a username, improve start button look

--- a/Public/play.css
+++ b/Public/play.css
@@ -1,4 +1,4 @@
-* { box-sizing: border-box; font: inherit; user-select: inherit; outline: none; margin: 0; padding: 0; }
+* { box-sizing: border-box; font: inherit; user-select: inherit; outline: none; margin: 0; padding: 0; line-height: inherit; }
 *[hidden] { display: none !important; }
 
 html, body {
@@ -52,6 +52,7 @@ body > div, body > form {
 .player .waiting {
   text-align: center;
   background: #800;
+  line-height: 0;
 }
 
 .player .waiting .header {
@@ -71,7 +72,8 @@ body > div, body > form {
 }
 
 .player .waiting canvas {
-  max-width: 100%;
+  width: 100%;
+  height: 256px;
 }
 
 .player .waiting button {
@@ -79,5 +81,9 @@ body > div, body > form {
   background: #cf4;
   width: 100%;
   font-size: 2em;
-  padding: 0.5em;
+  padding: 1em;
+}
+
+.player .waiting button.start {
+  background: #05f;
 }
